# danu

./: .env.example  .gitignore  .secrets-drop.example  COMPLIANCE.md  PASTE_KEYS_HERE.example.txt  PRIVACY.md  README.md  TERMS.md  TWILIO_CAMPAIGN.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_sms_subscriptions.py  003_memory_graph.py  004_usage_events.py  005_voice_hold_jobs.py
danu/: __init__.py  config.py  main.py
danu/admin/: reset.py
danu/agent/: __init__.py  llm.py  orchestrator.py  product_context.py  prompt_builder.py
danu/api/: deps.py
danu/channels/: __init__.py  base.py  outbound_sms.py  sms.py  sms_keywords.py  voice.py
danu/db/: __init__.py  base.py
danu/memory/: __init__.py  consolidate.py  embeddings.py  retrieve.py  schemas.py  store.py  task_extract.py
danu/onboarding/: __init__.py  extract.py  service.py
danu/reminders/: extract.py  schedule.py
danu/security/: __init__.py  allowlist.py  phones.py  twilio_verify.py
danu/tasks/: handlers.py  queue.py  worker.py
danu/usage/: __init__.py  rates.py  tracker.py
danu/voice/: __init__.py  tts.py  work_detector.py
docs/: OPERATIONS.md  SECRETS.md
scripts/: backup.sh  configure-twilio-voice.sh  import-secrets.sh  push-to-github.sh  reset-user.py  usage-report.py
tests/: conftest.py  test_agent_turn.py  test_channels.py  test_memory_consolidate.py  test_memory_retrieve.py  test_memory_store.py  test_onboarding.py  test_reminders.py  test_sms_keywords.py  test_twilio_sms.py  test_twilio_voice.py  test_usage.py  test_voice_hold.py
(+28 files in other folders)
