[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "danu"
version = "0.1.0"
description = "Personal AI assistant with reliable persistent memory"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.17",
    "apscheduler>=3.10.4",
    "openai>=1.57.0",
    "twilio>=9.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["danu"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"